Version 4.4.1
-------------

    * Fix to `plz watch` which wasn't deduplicating dependencies correctly, so could take
      a very long time to start on deep dependency trees.
    * Performance improvements to `get_labels()`.


Version 4.4.0
-------------

    * Added support for multiple per-config test commands in the same way as build commands.
    * Added hash_filegroup rule which acts like a normal filegroup but creates outputs with
      a name based on their hash, which facilitates having immutable names for artifacts.


Version 4.3.2
-------------

    * Fix a divide by zero bug in coverage stats display.


Version 4.3.1
-------------

    * Fix to java configs from previous version where opt didn't have debug info,
      we have an example of a test that fails in that configuration, so disabling
      until we have more info.


Version 4.3.0
-------------

    * Default compiler options for javac are now settable in config file.
    * Fixes to rare, subtle & quick to anger panics from concurrent map accesses in
      plz and the cache servers.
    * Fix to C++ tests where very rarely the output file got overwritten.
    * Work paths are correctly stripped from cgo_library and go_get rules.


Version 4.2.2
-------------

    * Fix divide by zero in coverage stats.
    * Another RPC cache fix, do not delete outputs when retrieving other files, only
      when retrieving the main ones in the build step.


Version 4.2.1
-------------

    * The RPC cache now deletes outputs of a target to fix a rare case around targets
      that have an output that is a directory and items in it are later removed.


Version 4.2.0
-------------

    * Adds some extra stats to output coverage file.

Version 4.1.0
-------------

    * New command, `plz watch`, which watches the sources of a set of targets for
      changes and rebuilds / re-tests them when they do.
    * Support for generating C++ gRPC code in grpc_library.