@@ -4,6 +4,7 @@ Version 4.4.1
     * Fix to `plz watch` which wasn't deduplicating dependencies correctly, so could take
       a very long time to start on deep dependency trees.
     * Performance improvements to `get_labels()`.
+	* Fix to mocks on go_test which sometimes weren't honoured when the commands were updated.
 
 
 Version 4.4.0
